<resources>
    <string name="locationNotAllocate">No location allocated</string>
    <string name="nhps_logo">Ayushman Bharat Validation Program</string>
    <string name="nhps_logo_govt">Government of India</string>
    <string name="nhps_logo_mohfw">Ministry of Health and Family Welfare</string>
    <string name="nhps_cp">Copyright © 2016 NATIONAL INFORMATICS CENTRE</string>
    <string name="login_ekyc_check">Please check the EKYC consent to proceed further.</string>
    <string name="offline_login_bt">Login with PIN</string>
    <string name="not_register_yet">Not Registered Yet</string>
    <string name="internet_connection_msg">No internet connection found.</string>
    <string name="server_error">Could not connect to server</string>
    <string name="slow_internet_connection_msg">Sorry,it seems like slow internet connection or server is not responding.</string>
    <string name="loginWithAdhar">Login with Aadhaar OTP</string>
    <string name="app_name">PM-RSSM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_get_data">GetDataActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_memberlist">MemberlistActivity</string>
    <string name="title_activity_member_detail">MemberDetailActivity</string>
    <string name="title_activity_edit_member_detail">EditMemberDetailActivity</string>
    <string name="title_activity_add_member">AddMemberActivity</string>
    <string name="launcher_screen_label">Ayushman Bharat Validation Program</string>
    <string name="adhar_hint">Enter your 12-digit Aadhaar</string>
    <string name="login_hint">Login with OTP </string>
    <string name="verifier_login">Surveyor Login</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait ...</string>
    <string name="welcomeTo">Welcome To</string>
    <string name="version">Version : </string>
    <string name="pleaseWait">Please Wait..</string>
    <string name="unableToConnectUIDAI">Unable To Connect from UIDAI Server, Please try again.</string>
    <string name="releaseDate">Release Date : </string>
    <string name="pleaseDownloadEb">Please download enumeration block data.</string>
    <string name="checkinUpdateVersion">Please wait checking update version...</string>
    <string name="pleaseEnterAadhaar">Please enter Aadhaar Number</string>
    <string name="pleaseConnectInternet">Please connect your device to internet.</string>
    <string name="dataNotDownload">Data is not downloaded. Please download data to start validation</string>
    <string name="enterValidAadhaar">Please enter valid Aadhaar Number.</string>
    <string name="ebNotMaching">Your enumeration block data is not matching with the downloaded data stored in the device.</string>
    <string name="pleaseEnterAadharOtp">Please enter OTP sent on your Aadhaar registered mobile number </string>
    <string name="nhpsFieldValidationSystem">NHPS Field Validation System.</string>
    <string name="loginConsent">I have no objection to provide my Aadhaar number for fetching know your customer(KYC) data from UIDAI database</string>
    <string name="checking_device_registraion">Checking device registration, Please wait..</string>
    <string name="checking_device">Device Authentication</string>
    <string name="updated_version_msg">Updated version is available. Please download and update the application.</string>
    <string name="device_auth_check_msg">Your device (IMEI1: 123456,IMEI2: 7654322) is not registerd with NHPS Field Verification System</string>
    <string name="auth_option_label">Choose one of the below option to authenticate aadhaar from UIDAI</string>
    <string name="bio_metric_option">Biometric</string>
    <string name="sms_otp_option">SMS OTP</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="otp_lable_title">Register With</string>
    <string name="otp_msg_forEsign">Please enter OTP sent by the UIDAI in your Aadhaar registerd mobile number for eSign</string>
    <string name="confirm_eSign_process">Here we have got your eSign, Please confirm for verified member signing process</string>
    <string name="alloted_location">Selected Location for verification.</string>
    <string name="state_name">State</string>
    <string name="district_name">District</string>
    <string name="tehsil">Sub district.</string>
    <string name="village">Village/Town</string>
    <string name="ward">Ward</string>
    <string name="nameTitme">Name</string>
    <string name="codeTitle">Code</string>
    <string name="houseSearchTag">Enter Head of the Family Name</string>
    <string name="alloted_screen_header">Home</string>
    <string name="serachHouseNumber">Enter your search text</string>
    <string name="search_head_name">Enter Member name to search house</string>
    <string name="search_start_digit_aadhaar">Enter Aadhaar number to search house</string>
    <string name="search_family_member">Search Household By Member name</string>
    <string name="search_aadhaar_number">Search Household By Aadhaar Number</string>
    <string name="search">Search</string>
    <string name="search_by_aadhaar">Search household by Aadhaar Number</string>
    <string name="search_by_member_name">Search household by Member Name</string>
    <string name="searchHouseNumber">Search Household</string>
    <string name="search_options">Search Family by member name,Household No. or Aadhaar No.</string>
    <string name="search_popup_msg">Selected House Details.</string>
    <string name="house_member_list">House Member List</string>
    <string name="send_offline_date">Get Offline Updated Members</string>
    <string name="updated_member">Get Updated Members</string>
    <string name="get_member_by_urn">Get Members by URN</string>
    <string name="esign_verified">Sign Verified Member</string>
    <string name="edit_member_detail">Update</string>
    <string name="english_name">Name in english</string>
    <string name="regional_name">Name in Regional Language</string>
    <string name="english_father_name">Father\'s Name in English</string>
    <string name="regional_father_name">Father\'s Name in Regional Language</string>
    <string name="english_mother_name">Mother\'s Name in English</string>
    <string name="regional_mother_name">Mother\'s Name in Regional Language</string>
    <string name="english_relation">Relationship with Head of the Family in English</string>
    <string name="regional_relation">Relationship with Head of the Family in Regional Language</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="marital_status">Marital Status</string>
    <string name="english_address">Address in English</string>
    <string name="regional_address">Address in Regional Language</string>
    <string name="disability_status">Disability Status</string>
    <string name="cast_group">Caste/Tribal Group</string>
    <string name="additonal_detail">Additional Detail</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="aadhaar_name">Name as in Aadhaar</string>
    <string name="aadhaar_enrolled_id">Enrolment ID of Aadhaar</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_number">Enrolment ID of Aadhaar</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="govt_photo_idcard_type">Government Photo ID card Type</string>
    <string name="govt_photo_id_number">Government Photo ID Card Number</string>
    <string name="govt_scan_image">Scanned Image of Government Photo ID card</string>
    <string name="urn_rsby">URN Number of RSBY</string>
    <string name="rsby_verify">Verify from RSBY</string>
    <string name="beneficiary_photo">Photo of Beneficiary</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="other_aadhaar_detail">Other Aadhaar Detail</string>
    <string name="aadhar_dob">Date Of Birth</string>
    <string name="aadhar_gender">Gender</string>
    <string name="aadhar_phone">Phone</string>
    <string name="aadhar_email">Email</string>
    <string name="aadhar_address">Address</string>
    <string name="aadhar_care_of">Care Of</string>
    <string name="aadhar_house">House</string>
    <string name="aadhar_street">Street</string>
    <string name="land_mark">Land Mark</string>
    <string name="location">Location</string>
    <string name="vill_town_city">Vill/Town/City</string>
    <string name="sub_district">Sub District</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="pincode">Pin Code</string>
    <string name="post_office">Post Office</string>
    <string name="rsby_member_details">Search</string>
    <string name="urn_msg">Enter member URN to fetch detail from RSBY</string>
    <string name="esign_msg">you are signing</string>
    <string name="send_all">Send All</string>
    <string name="send">Send</string>
    <string name="eSign">eSign</string>
    <string name="verified">Verified</string>
    <string name="offline_list">Offline Updated List</string>
    <string name="downloaded_block_msg">Download new Enumeration Block data</string>
    <string name="complete_verified">Complete Verified Members</string>
    <string name="partial_verified">Partial Verified Members</string>
    <string name="signed_members">Signed Members</string>
    <string name="updated_members_list">Updated Member List</string>
    <string name="aadhar_not_register">Invalid IMEI number. Mobile device is not registered for field validation.</string>
    <string name="mobileno_not_reg_with_adhar">Mobile number for this Aadhaar is not registered with UIDAI</string>
    <string name="photo_text"></string>
    <string name="dob">Date of birth as in Aadhaar</string>
    <string name="submit">Submit</string>
    <string name="relation">Relation</string>
    <string name="fatherName">Father\'s Name</string>
    <string name="MarritalStatus">Marital Status</string>
    <string name="occupation">Occupation</string>
    <string name="capturePhoto">Capture Photo</string>
    <string name="captureGps">Capture Gps Location</string>
    <string name="profile">Profile</string>
    <string name="Logout">Logout</string>
    <string name="home">Home</string>
    <string name="checkUpdate">Software Update</string>
    <string name="resetPin">Reset Pin</string>
    <string name="deleteEb">Delete Enumeration Block</string>
    <string name="clearDevice">Clear Device"</string>
    <string name="searchMember">Search Member</string>
    <string name="importRsby">Import RSBY card</string>
    <string name="syncHouse">Sync Household</string>
    <string name="assignedLocation">Assigned Location</string>
    <string name="name">Name : </string>
    <string name="motherName">Mother \'s Name</string>
    <string name="reqForConn">Request for data correction</string>
    <string name="Reader">Reader:</string>
    <string name="ACS">ACS</string>
    <string name="IdentiveScm">Identive/SCM</string>
    <string name="HIDomni">HID Omnikey</string>
    <string name="Refresh">Refresh</string>
    <string name="familyDetails">Family Details</string>
    <string name="memberDetails">Member Details</string>
    <string name="photoDetails">Photo Details</string>
    <string name="minutiaDetails">Minutia Details</string>
    <string name="InsuranceDetails">Insurance Details</string>
    <string name="balanceDetails">Balance Details</string>
    <string name="csnCcCt">CSN,CC,CT</string>
    <string name="readRsbyCard">Read RSBY card</string>
    <string name="notification">Download Notification</string>
</resources>