<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include layout="@layout/header_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/readerlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reader"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingRight="15dp"
                android:background="@drawable/edittext_background_gray_corner">

            </Spinner>

            <RadioGroup
                android:id="@+id/radioGroupreaders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/ACS" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IdentiveScm" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HIDomni" />
            </RadioGroup>



            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Refresh"
                android:textColor="@color/yellow_dark"
                android:background="@drawable/button_background_orange"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/checkBox_famdet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/familyDetails" />

            <CheckBox
                android:id="@+id/checkBox_memdet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memberDetails" />

            <CheckBox
                android:id="@+id/checkBox_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photoDetails" />

            <CheckBox
                android:id="@+id/checkBox_minudet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutiaDetails" />

            <CheckBox
                android:id="@+id/checkBox_insu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/InsuranceDetails" />

            <CheckBox
                android:id="@+id/checkBox_bal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balanceDetails" />

            <CheckBox
                android:id="@+id/checkBox_do"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/csnCcCt" />

        </LinearLayout>

        <Button
            android:id="@+id/button_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cardReadStart"
            android:text="@string/readRsbyCard"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:background="@drawable/button_background_orange_ehit"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>