<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/add_scheme_det_layout"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:background="@drawable/tab_button_shape"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/mediumTextview"
                android:text="@string/reqForConn"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/textViewBlue"/>
            <TextView
                android:id="@+id/reqNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/textView"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fatherName"
                style="@style/textViewBlue"/>
            <TextView
                android:id="@+id/reqFatherNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/textView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motherName"
                style="@style/textViewBlue"/>
            <TextView
                android:id="@+id/reqMotherNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/textView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relation"
                style="@style/textViewBlue"/>
            <TextView
                android:id="@+id/reqRelationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/textView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                style="@style/textViewBlue"/>
            <TextView
                android:id="@+id/reqDateOfBirthTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/textView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                style="@style/textViewBlue"/>
            <TextView
                android:id="@+id/reqGenderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/textView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MarritalStatus"
                style="@style/textViewBlue"/>
            <TextView
                android:id="@+id/reqMaritalStatTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/textView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/occupation"
                style="@style/textViewBlue"/>
            <TextView
                android:id="@+id/reqOccupationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                style="@style/textView"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
