<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_shine"
            android:text="@string/auth_option_label"
            android:textSize="@dimen/text_size_15sp"/>
        <Button

            android:id="@+id/otpVrification"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/text_size_15sp"
            android:text="@string/sms_otp_option"
            android:background="@drawable/rounded_shape_yello_button"/>
        <Button
            android:textSize="@dimen/text_size_15sp"
            android:id="@+id/bioMetric"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/bio_metric_option"
            android:background="@drawable/rounded_shape_yello_button"/>
    </LinearLayout>

</LinearLayout>
