<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nhpm.activity.PhotoCaptureActivity">
    <include layout="@layout/header_layout" android:id="@+id/header" />
    <LinearLayout
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/takePhotoBT"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:textColor="#fff"
            android:background="@drawable/rounded_shape_yello_button"
            android:layout_width="match_parent"
            android:text="@string/capturePhoto"
            android:layout_height="40dp"/>
        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/memberPicIV"
            android:background="@drawable/default_pic"
            android:layout_gravity="center_horizontal"
            android:layout_width="240dp"
            android:layout_height="240dp" />

        <Button
            android:visibility="gone"
            android:id="@+id/checkInGpsLocation"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_shape_yello_button"
            android:layout_width="match_parent"
            android:text="@string/captureGps"
            android:layout_height="40dp"/>
        <LinearLayout
            android:visibility="gone"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center_horizontal"
                style="@style/textView"

                android:text="@string/photo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"
        android:id="@+id/submitBT"
        android:textColor="#fff"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_shape_yello_button"
        android:layout_width="match_parent"
        android:text="@string/submit"
        android:layout_height="40dp"/>
</RelativeLayout>
